# WishSim

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: V0_2_0_CONSISTENCY_GUIDE.md
logs/: 2026-07-18-banner-grid-saif-weapon-art.md  2026-07-18-ghostty-graphics.md  2026-07-18-inventory-roster-stats.md  2026-07-18-sergei-standard-five-star.md  2026-07-18-standard-fate-supports-signatures.md  2026-07-18-steven-limited-five-star.md  2026-07-18-v0-3-0-release.md  2026-07-18-v0-3-1-release.md  2026-07-19-v0-4-0-release.md  2026-07-19-weapon-selector-character-archive.md  2026-07-20-game-shell-teams-equipment.md  2026-07-20-v0-5-0-release.md  2026-07-22-battle-test-foundation.md  2026-07-23-battle-presentation-roster-portraits.md  2026-07-23-battle-test-overhaul.md  2026-07-23-bp-cooldown-goliath-balance.md  2026-07-23-bp-geo-boss-history.md  2026-07-23-early-character-abilities.md  2026-07-23-klara-anemo-release.md  2026-07-23-klara-art-and-rename.md  2026-07-23-six-character-roster-grid.md  2026-07-23-v0-6-0-release.md  2026-07-23-v0-6-1-release.md  2026-07-23-v0-7-0-release.md  2026-07-23-yeoungin-alpha-roster-scroll-fix.md  2026-07-23-yeoungin-four-star-companions.md  2026-07-23-yeoungin-limited-five-star.md  README.md
src/: app.rs  art.rs  battle.rs  kitty.rs  main.rs  model.rs  simulation.rs  storage.rs  ui.rs
